--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,61 @@ services:
       - 6380
     ports:
       - 6380:6379
+
+  elasticsearch7:
+    image: elasticsearch:7.3.0
+    restart: always
+    privileged: "true"
+    container_name: tool-elasticsearch7
+    volumes:
+      - ./elasticsearch7/conf:/usr/share/elasticsearch/conf
+      - ./elasticsearch7/data:/usr/share/elasticsearch/data
+      - ./elasticsearch7/logs:/usr/share/elasticsearch/logs
+    networks:
+      app_net:
+        ipv4_address: 177.18.0.4
+    environment:
+      - discovery.type=single-node
+    expose:
+      - 9200
+      - 9300
+    ports:
+      - 9200:9200
+      - 9300:9300
+
+  nginx:
+    image: nginx:latest
+    restart: always
+    privileged: "true"
+    container_name: tool-nginx
+    volumes:
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/data:/usr/share/nginx/html
+      - ./nginx/sites-enabled:/etc/nginx/conf.d
+      - ./nginx/log:/var/log/nginx
+      - ~/work:/work
+    networks:
+      app_net:
+        ipv4_address:  177.18.0.5
+    expose:
+      - 80
+    ports:
+      - 80:80
+
+  php-fpm73:
+    image: php:7.3-fpm
+    restart: always
+    privileged: "true"
+    container_name: tool-phpfpm73
+    volumes:
+      - ./phpfpm73/php.ini-development:/usr/local/etc/php/php.ini-development
+      - ./phpfpm73/php.ini-production:/usr/local/etc/php/php.ini-production
+      - ./phpfpm73/php-fpm.conf:/usr/local/etc/php-fpm.conf
+      - ~/work:/work
+    networks:
+      app_net:
+        ipv4_address:  177.18.0.6
+    expose:
+      - 9001
+    ports:
+      - 9001:9000
