--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,10 @@ PHPFPM_PORT=9001
 ELASTICSEARCH_IP=177.18.0.6
 ELASTICSEARCH_HTTP_PORT=9200
 ELASTICSEARCH_TCP_PORT=9300
+
+# adminer
+ADMINER_IP=177.18.0.7
+ADMINER_PORT=8901
+
+# ubuntu
+UBUNTU_IP=177.18.0.8
