--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       app_net:
         ipv4_address: ${MYSQL_SUBNET_IP}
     expose:
-      - ${MYSQL_PORT}
+      - 3306
     ports:
       - ${MYSQL_PORT}:3306
 
@@ -43,7 +43,7 @@ services:
       app_net:
         ipv4_address: ${REDIS_SUBNET_IP}
     expose:
-      - ${REDIS_PORT}
+      - 6379
     ports:
       - ${REDIS_PORT}:6379
 
@@ -62,7 +62,7 @@ services:
       app_net:
         ipv4_address: ${NGINX_IP}
     expose:
-      - ${NGINX_PORT}
+      - 80
     ports:
       - ${NGINX_PORT}:80
 
@@ -81,7 +81,7 @@ services:
       app_net:
         ipv4_address: ${PHPFPM_IP}
     expose:
-      - ${PHPFPM_PORT}
+      - 9000
     ports:
       - ${PHPFPM_PORT}:9000
 
@@ -100,8 +100,8 @@ services:
       app_net:
         ipv4_address: ${ELASTICSEARCH_IP}
     expose:
-      - ${ELASTICSEARCH_HTTP_PORT}
-      - ${ELASTICSEARCH_TCP_PORT}
+      - 9200
+      - 9300
     ports:
       - ${ELASTICSEARCH_HTTP_PORT}:9200
       - ${ELASTICSEARCH_TCP_PORT}:9300
@@ -117,13 +117,33 @@ services:
       app_net:
         ipv4_address: ${ADMINER_IP}
     expose:
-      - ${ADMINER_PORT}
+      - 8080
     ports:
       - ${ADMINER_PORT}:8080
 
-#  tool-ubuntu1804:
-#    image: ubuntu:18.04
-#    restart: always
-#    privileged: "true"
-#    container_name: tool-ubuntu1804
-#    command: ["bash"]
+  #  tool-ubuntu1804:
+  #    image: ubuntu:18.04
+  #    restart: always
+  #    privileged: "true"
+  #    container_name: tool-ubuntu1804
+  #    command: ["bash"]
+
+  tool-mosquitto16:
+    image: eclipse-mosquitto:1.6
+    restart: always
+    privileged: "true"
+    container_name: tool-mosquitto16
+    volumes:
+      - ./mosquitto/config/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
+    networks:
+      app_net:
+        ipv4_address: ${MQTT_IP}
+    expose:
+      - 1883
+      - 9001
+    ports:
+      - ${MQTT_PORT}:1883
+      - ${MQTT_PORT_EX}:9001
+
