--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -648,7 +648,7 @@ log_dest file /mosquitto/log/mosquitto.log
 # username/password or TLS-PSK checks, then `allow_anonymous` defaults to
 # false.
 #
-#allow_anonymous true
+allow_anonymous false
 
 # -----------------------------------------------------------------
 # Default authentication and topic access control
@@ -666,7 +666,7 @@ log_dest file /mosquitto/log/mosquitto.log
 # See the TLS client require_certificate and use_identity_as_username options
 # for alternative authentication options. If an auth_plugin is used as well as
 # password_file, the auth_plugin check will be made first.
-#password_file
+password_file /mosquitto/config/pwfile
 
 # Access may also be controlled using a pre-shared-key file. This requires
 # TLS-PSK support and a listener configured to use it. The file should be text
@@ -725,7 +725,7 @@ log_dest file /mosquitto/log/mosquitto.log
 #
 # If an auth_plugin is used as well as acl_file, the auth_plugin check will be
 # made first.
-#acl_file
+acl_file /mosquitto/config/aclfile
 
 # -----------------------------------------------------------------
 # External authentication and topic access plugin options
