--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,9 @@ UBUNTU_IP=177.18.0.8
 MQTT_IP=177.18.0.9
 MQTT_PORT=1883
 MQTT_PORT_EX=9002
+
+# postgres
+POSTGRES_USER=worker
+POSTGRE_PASSWORD=123456
+POSTGRE_IP=177.18.0.10
+POSTGRE_PORT=5432
