--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.7"
 
 networks:
   app_net:
@@ -147,3 +147,20 @@ services:
       - ${MQTT_PORT}:1883
       - ${MQTT_PORT_EX}:9001
 
+  tool-postgres12:
+    image: postgres:12
+    restart: always
+    privileged: "true"
+    container_name: tool-postgres12
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRE_PASSWORD}
+    volumes:
+      - ./postgresql12/postgresql.conf:/etc/postgresql/postgresql.conf
+    networks:
+      app_net:
+        ipv4_address: ${POSTGRE_IP}
+    expose:
+      - 5432
+    ports:
+      - ${POSTGRE_PORT}:5432
