--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,12 +121,20 @@ services:
     ports:
       - ${ADMINER_PORT}:8080
 
-  #  tool-ubuntu1804:
-  #    image: ubuntu:18.04
-  #    restart: always
-  #    privileged: "true"
-  #    container_name: tool-ubuntu1804
-  #    command: ["bash"]
+  tool-ubuntu1804:
+    image: ubuntu-php:1.0
+    restart: always
+    privileged: "true"
+    container_name: tool-ubuntu1804
+    volumes:
+      - ${APP_PROJECT_PATH}:/work
+    networks:
+      app_net:
+        ipv4_address: ${UBUNTU_IP}
+    expose:
+      - 80
+    ports:
+      - ${UBUNTU_PORT}:80
 
   tool-mosquitto16:
     image: eclipse-mosquitto:1.6
