--- a/.env.example
+++ b/.env.example
@@ -12,38 +12,41 @@ MYSQL_ROOT_PASSWORD=123456
 MYSQL_SUBNET_IP=177.18.0.2
 MYSQL_PORT=3306
 
+# postgres
+POSTGRES_USER=worker
+POSTGRE_PASSWORD=123456
+POSTGRE_IP=177.18.0.3
+POSTGRE_PORT=5432
+
 # redis
-REDIS_SUBNET_IP=177.18.0.3
+REDIS_SUBNET_IP=177.18.0.4
 REDIS_PORT=6380
 
-# nginx
-NGINX_IP=177.18.0.4
-NGINX_PORT=80
-
-# php-fpm
-PHPFPM_IP=177.18.0.5
-PHPFPM_PORT=9001
-
 # elasticsearch
-ELASTICSEARCH_IP=177.18.0.6
+ELASTICSEARCH_IP=177.18.0.5
 ELASTICSEARCH_HTTP_PORT=9200
 ELASTICSEARCH_TCP_PORT=9300
 
 # adminer
-ADMINER_IP=177.18.0.7
+ADMINER_IP=177.18.0.6
 ADMINER_PORT=8901
 
-# ubuntu
-UBUNTU_IP=177.18.0.8
-UBUNTU_PORT=8902
-
 # mosquitto
-MQTT_IP=177.18.0.9
+MQTT_IP=177.18.0.7
 MQTT_PORT=1883
 MQTT_PORT_EX=9002
 
-# postgres
-POSTGRES_USER=worker
-POSTGRE_PASSWORD=123456
-POSTGRE_IP=177.18.0.10
-POSTGRE_PORT=5432
+# rabbitmq
+RABBITMQ_IP=177.18.0.8
+RABBITMQ_PORT=5672
+RABBITMQ_MANAGE_PORT=15672
+RABBITMQ_USER=worker
+RABBITMQ_PASSWORD=123456
+
+# nginx
+NGINX_IP=177.18.0.9
+NGINX_PORT=80
+
+# ubuntu
+UBUNTU_IP=177.18.0.10
+UBUNTU_PORT=8902
